--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 body {
     display: flex;
-    align-items: center;
-    justify-content: center;
     font-family: 'Roboto', sans-serif;
+    flex-direction: column;
+    margin: 0;
     padding: 0;
-    margin: 0 0;
 }
 
-header > img {
+/* Top of page with intro info */
+
+.left-header > img {
     width: 200px;
     height: auto;
     margin: 0;
@@ -24,7 +25,7 @@ header > img {
     display: flex;
     justify-content: center;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 ul {
@@ -42,7 +43,13 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 80px;
+    margin-right: -35px;
+}
+
+.left-header{
+    display:flex;
+    align-items: center;
+    font-size: x-large;
 }
 
 .top {
@@ -51,5 +58,171 @@ header{
     flex-direction: column;
     background-color: #1F2947;
     margin: 0;
+    padding: 40px 220px;
     color: white;
+}
+
+.descriptor {
+    margin-left: 100px;
+    width: 600px;
+}
+
+.descriptor > h1 {
+    font-size: 48px;
+    color: #F9FAF8;
+    font-weight: 900;
+    margin: 0;
+    padding: 0;
+}
+
+.subtext, .right-links {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.descriptor > button {
+    background-color: #3882F6;
+    border: none;
+    padding: 14px 20px;
+    color: #F9FAF8;
+    text-align: center;
+    font-size: 18px;
+    border-radius: 12px;
+    transition: .3s;
+}
+
+/* Menu Section */
+
+.info-section {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 40px 220px;
+}
+
+.items {
+    display: flex;
+    align-items: center;
+    gap: 90px;
+    margin: 80px 0px;
+}
+.subsection > img{
+    width: 300px;
+    height: auto;
+    
+}
+
+.subsection > p{
+    width: 300px;
+    text-align: center;
+}
+
+h2 {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+}
+
+/* testimonial section */
+
+.testimonial {
+    display: flex;
+    background-color: #E5E7EB;
+    justify-content: center;
+    align-items: center;
+}
+
+.text {
+    color: #1F2937;
+    width: 700px;
+    margin: 200px;
+}
+
+#qoute {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+}
+
+#remark {
+    font-weight: bold;
+    font-size: large;
+    text-align: right;
+}
+
+/* Call to action section */
+
+.action {
+    justify-content: center;
+    align-items: center;
+}
+
+.blue-section {
+    margin: 100px 400px;
+    background-color: #3882F6;
+    color: #F9FAF8;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 90px 100px;
+    border-radius: 100px;
+}
+
+.left-text {
+    padding: 0;
+    margin: 0 50px;
+}
+
+.left-text > h2 {
+    color: #F9FAF8;
+    margin: 0 0;
+    font-size: 25px;
+}
+.left-text > p{
+    margin: 7px 0;
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.blue-section > button {
+    background-color: #3882F6;
+    border: 2px solid #F9FAF8;
+    padding: 14px 20px;
+    color: #F9FAF8;
+    text-align: center;
+    font-size: 18px;
+    border-radius: 12px;
+    font-weight: 800;
+    transition: .3s;
+}
+
+button:hover {
+    background-color: #669cf2;
+}
+
+/* footer */
+
+footer {
+    color: #E5E7EB;
+    background-color: #1F2937;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 60px;
+    font-size: 24px;
+    font-weight: 600;
+
+}
+
+footer > p{
+    margin: 8px ;
+}
+
+a {
+    margin: 8px;
+    text-decoration: none;
+    color: #E5E7EB;
 }
